# fuurin

./: .gitignore  Cargo.toml  README  README.md  flake.nix
.github/workflows/: flake-update.yml  nix.yml
src/: main.rs
