[package]
name = "fuurin"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
rust-version = "1.83.0"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.43", features = ["derive"] }
cursive = "0.21.1"
rodio = { version = "0.21.1", default-features = false, features = ["lewton", "playback"] }
